--- a/index.html
+++ b/index.html
@@ -1,8 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FarrmAI</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <div class="content">
+            <h1>FarrmAI</h1>
+            <h2>What we do?</h2>
+            <p>Machine learning models to analyze health and behaviour of cattle.</p>
+            <h2>How we do it?</h2>
+            <p><a href="mailto:contact@farrmai.com">Just ask.</a></p>
+        </div>
+        <footer>
+            © 2024 FarrmAI
+        </footer>
+    </div>
 </body>
 
 </html>
