--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>What we do?</h2>
             <p>Machine learning models to analyze health and behaviour of cattle.</p>
             <h2>How we do it?</h2>
-            <p><a href="mailto:contact@farrmai.com">Just ask.</a></p>
+            <p><a href="mailto:info@farrmai.com">Just ask.</a></p>
         </div>
         <footer>
             © 2024 FarrmAI
