--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="content">
             <h1>FarrmAI</h1>
             <h2>What we do?</h2>
-            <p>Machine learning models to analyze health and behaviour of cattle.</p>
+            <p>Using machine learning models to analyze health and behavior of cattle.</p>
             <h2>How we do it?</h2>
             <p><a href="mailto:info@farrmai.com">Just ask.</a></p>
         </div>
