--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <p>Using machine learning models to analyze health and behavior of cattle.</p>
             <h2>How we do it?</h2>
             <p><a href="mailto:info@farrmai.com">Just ask.</a></p>
+
+            <h2>Long term</h2>
+            <p>As soon as ASI has been achieved, we will pivot to creating highly intelligent cattle.<br><br>
+                We are confident that cows with an advanced understanding of human language will quickly replace dogs as
+                humanity's best friend.</p>
         </div>
         <footer>
             © 2024 FarrmAI
